# helmor

./: AGENTS.md  CHANGELOG.md  README.md  index.html  package.json
.agents/skills/helmor-cli/: SKILL.md
.announcements/: agents-can-drive-helmor.json  auto-archive-on-merge.json  color-themes.json  composer-arrow-history-recall.json  context-detail-auto-refresh.json  reuse-existing-branch.json  workflows-drilldown-and-opus-4-8.json
.changeset/: agents-can-drive-helmor.md  ask-user-question-survives-navigation.md  auto-archive-on-merge.md  bundled-cli-upgrade-opus-4-8.md  calm-proxies-connect.md  chat-sidebar-unread-dot.md  codex-mcp-tool-approval.md  codex-stop-immediate.md  composer-arrow-history-recall.md  dismiss-workspace-advance-neighbour.md  fast-carpets-cheer.md  fast-git-changes-panel.md  fast-mode-unavailable-feedback.md  fix-agent-contexts-ignore.md  fix-composer-scroll-jumps.md  fix-sidebar-hover-card-stuck.md  fix-terminal-stop-button-clickable.md  gentle-arrows-recall.md  independent-light-dark-color-themes.md  keep-queue-across-start-page.md  quiet-chats-unstick.md  quiet-orbits-attach.md  slack-context-revalidation-and-rendering.md  slack-import-keychain-account.md  slack-themes-and-region-tokens.md  smooth-inspector-resize.md  steady-context-panels.md  swift-panes-glide.md  tidy-tabs-cleanup.md  unified-typography-scale.md  workflow-gui-support.md
sidecar/: package.json
sidecar/scripts/: stage-vendor.ts
sidecar/src/: agent-proxy.ts  claude-session-manager.ts  codex-app-server-manager.ts  codex-app-server.ts  codex-steer-gate.test.ts  emitter.ts  index.ts  model-catalog.ts  request-parser.ts  session-manager.ts  title.ts
sidecar/src/triage/: prompts.test.ts  prompts.ts
sidecar/test/: claude-session-manager.test.ts  codex-app-server-manager.test.ts  codex-app-server.test.ts  title.test.ts
src/: App.create.test.tsx  App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agents.rs  error.rs  lib.rs  schema.rs  service.rs  sidecar.rs
src-tauri/src/agents/: catalog.rs  queries.rs  system_prompt.rs
src-tauri/src/agents/streaming/: active_streams.rs  bridges.rs  event_loop_tests.rs  mod.rs  params.rs  workflow_persist.rs
src-tauri/src/cli/: args.rs  mod.rs  repo.rs  session.rs  system.rs  workspace.rs
src-tauri/src/commands/: editor_commands.rs  forge_commands.rs  script_commands.rs  settings_commands.rs  system_commands.rs  workspace_commands.rs
src-tauri/src/commands/tests/: archive_restore.rs  workspace_creation.rs
src-tauri/src/git/: ops.rs
src-tauri/src/local_llm/: title.rs
src-tauri/src/mcp/: catalog.rs  mod.rs  response.rs
src-tauri/src/mcp/tools/: common.rs  data.rs  mod.rs  repo.rs  send.rs  session.rs  tests.rs  workspace.rs
src-tauri/src/models/: mod.rs  settings.rs  workspaces.rs
src-tauri/src/models/session_inspection/: mod.rs  summarize.rs
src-tauri/src/pipeline/: event_filter.rs  types.rs
src-tauri/src/pipeline/adapter/: blocks.rs  labels.rs  mod.rs  tests.rs
src-tauri/src/slack/: api.rs  desktop_scrape.rs  detail.rs  inbox.rs
src-tauri/src/ui_sync/: events.rs
src-tauri/src/workspace/: agent_contexts.rs  archive.rs  branching.rs  helpers.rs  lifecycle.rs  mod.rs  scripts.rs  state.rs  workspaces.rs
src-tauri/src/workspace/files/: changes.rs  editor.rs  mod.rs  types.rs
src-tauri/src/workspace/files/tests/: workspace_changes.rs
src-tauri/src/workspace/ship_actions/: mod.rs  prompts.rs  runner.rs
src-tauri/tests/: pipeline_streams.rs  streaming_send_params.rs
src-tauri/tests/common/: normalize.rs
src-tauri/tests/fixtures/streams/claude/: task-plan.jsonl  workflow.jsonl
src-tauri/tests/snapshots/: agent_stream_event_wire__wire_format_aborted.snap  agent_stream_event_wire__wire_format_done.snap  agent_stream_event_wire__wire_format_user_input_request_ask_user_question.snap  agent_stream_event_wire__wire_format_user_input_request_form.snap  agent_stream_event_wire__wire_format_user_input_request_url.snap  pipeline_streams__stream_replay@claude__task-plan.jsonl.snap  pipeline_streams__stream_replay@claude__workflow.jsonl.snap  stream_bridge_elicitation__form_user_input_replays_alongside_message_stream.snap  stream_bridge_elicitation__url_user_input_replays_without_polluting_pipeline.snap  stream_bridge_events__aborted_event_carries_user_requested_reason.snap  stream_bridge_events__ask_user_question_user_input_pauses_stream_with_pending_state.snap  stream_bridge_events__codex_user_input_passes_form_payload_through.snap  stream_bridge_events__done_event_finalizes_full_turn.snap  streaming_send_params__params_with_agent_proxy.snap
src/components/: account-hover-card-content.tsx  action-row.tsx  branch-picker.tsx  conductor-onboarding.tsx  file-mention-badge.tsx  forge-connect-dialog.tsx  terminal-output.tsx
src/components/ai/: code-block.test.tsx  code-block.tsx  file-tree.tsx  reasoning.tsx
src/components/inline-badge/: index.tsx  preview-renderers.tsx
src/components/ui/: badge.tsx  button-group.tsx  button.tsx  command.tsx  confirm-dialog.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  hover-card.tsx  input-group.tsx  input.tsx  kbd-key.tsx  label.tsx  popover.tsx  sheet.tsx  sidebar.tsx  table.tsx  tabs.tsx  textarea.tsx  toggle.tsx  tooltip.tsx
src/features/announcements/: announcements.ts  index.tsx  release-announcement-catalog.json
src/features/commit/: split-button.tsx
src/features/composer/: composer-interaction-states.stories.tsx  container.test.tsx  container.tsx  editor-ops.ts  elicitation-schema.test.ts  elicitation-schema.ts  ime-composition.test.tsx  ime-switch-space.test.tsx  index.tsx  input-history.test.ts  (+3 more)
src/lib/: api.ts  css-color.test.ts  css-color.ts  errors.ts  message-layout-estimator.ts  monaco-runtime.ts  platform.ts  query-client.ts  session-thread-pagination.ts  settings.test.ts  settings.ts  slack-text.test.ts  slack-text.tsx  structural-equality.test.ts  structural-equality.ts  tool-summary.test.ts  tool-summary.ts  use-submit-queue.ts  utils.ts
src/styles/: color-theme.css
src/test/: setup.ts
(+162 files in other folders)
