[package]
name = "helmor"
version = "0.28.0"
description = "The local-first IDE for coding agent orchestration."
authors = ["Caspian Zhao", "Nathan Lian"]
edition = "2021"
default-run = "helmor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "helmor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
dotenvy = "0.15"
tauri-build = { version = "2", features = [] }

[dependencies]
aes = "0.8"
anyhow = "1"
base64 = "0.22.1"
cbc = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false }
rand = "0.10.0"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
    "stream",
] }
rusty-leveldb = "3"
sha1 = "0.10"
# `wreq` (and the `wreq-util` companion) is a hard fork of `reqwest`
# with built-in browser TLS / HTTP-2 fingerprint emulation. We use it
# only for Slack: stock reqwest's rustls ClientHello bytes do not
# match any real browser, and Slack's Cloudflare-fronted edge
# classifies them as "spoofed_user_agent" / "unexpected_scraping" and
# replies `invalid_auth` BEFORE inspecting the token. See
# `korotovsky/slack-mcp-server#86`.
wreq = { version = "5", default-features = false, features = ["json"] }
wreq-util = "2"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tauri = { version = "2", features = ["protocol-asset", "test", "devtools"] }
tempfile = "3"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-mcp-bridge = "0.11.0"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
] }
notify = "7"
notify-debouncer-full = "0.4"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "chrono",
] }
url = "2"
uuid = { version = "1", features = ["v4"] }

# libc backs Unix process groups, signals, and PTY handling.
# Windows support will need platform-specific replacements before this can be gated.
[dependencies.libc]
version = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
security-framework = "3"
security-framework-sys = "2"

[[bin]]
name = "helmor-cli"
path = "src/bin/helmor-cli.rs"

[[bin]]
name = "gen_pipeline_fixture"
path = "src/bin/gen_pipeline_fixture.rs"

[dev-dependencies]
insta = { version = "1", features = ["yaml", "glob"] }
tempfile = "3"

# ---------------------------------------------------------------------------
# Dev profile: optimised for fastest compilation, not runtime performance.
# sccache is the cross-worktree cache; incremental is disabled because the
# two are mutually exclusive.
# ---------------------------------------------------------------------------
[profile.dev]
debug = "line-tables-only"   # keep backtraces, skip 80% of debug info
split-debuginfo = "unpacked" # skip dsymutil merge (macOS default, explicit)
opt-level = 0
codegen-units = 256          # max intra-crate parallelism
incremental = false          # required for sccache compatibility

[profile.dev.package."*"]
debug = false       # deps don't need debug info at all
opt-level = 0
codegen-units = 256

[profile.dev.build-override]
debug = false       # build scripts & proc-macros: fastest possible
opt-level = 0
codegen-units = 256
